# OldWomanGame

./: CMakeLists.txt
glade/: old-woman-game.glade  testgtk.glade~
src/: main.c
steps/01-window/glade/: testgtk.glade
steps/01-window/src/: main.c
steps/02-label/src/: main.c
